Fixed navbar on mobile

--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
+
 body {
     padding: 0;
     margin: 0;
@@ -94,6 +95,68 @@ pre {     /**** Used for code block ****/
 }    
 
 /************** For Navbar  ******************/
+ /* Add a black background color to the top navigation */
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+    position:fixed;
+    width: 100%;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+/* Add an active class to highlight the current page */
+.active {
+    background-color: #4CAF50;
+    color: white;
+}
+
+/* Hide the link that should open and close the topnav on small screens */
+.topnav .icon {
+    display: none;
+}
+
+ /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: fixed;}
+  .topnav.responsive a.icon {
+    position: fixed;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
+
+
 ul.nav {
     list-style-type: none;
     margin: 0;
@@ -221,6 +284,18 @@ img.center {
     h1 {
 	font-size: 30px;
 	font-family: Verdana, Tahoma;
+    }
+
+    h1.fancy {
+	text-align: center;
+	font-size:30px;
+	font-family: 'Cinzel Decorative',Verdana, Tahoma;
+    }
+
+    h2.fancy {
+	font-size:20px;	
+	text-align:center;
+	font-family: 'Cinzel Decorative',Verdana, Tahoma;
     }
     
     .img-rounded {
